kdrive: klinux.h breaks make dist
This file is no longer part of the source code
and must be removed from distribution.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>
Reviewed-by: Mikhail Gusarov <dottedmag@dottedmag.net>
Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/hw/kdrive/linux/Makefile.am
+++ b/hw/kdrive/linux/Makefile.am
@@ -8,7 +8,7 @@ noinst_LTLIBRARIES = liblinux.la
 
 liblinux_la_SOURCES =
 
-liblinux_la_SOURCES += linux.c klinux.h
+liblinux_la_SOURCES += linux.c
 
 if KDRIVE_KBD
 liblinux_la_SOURCES += keyboard.c
