config: replace custom code with reusable macro XORG_WITH_DOXYGEN
XORG_WITH_DOXYGEN provides additional functions like a configure
option which allow platform builders to control the usage of
the doxygen program.

This is a requirement from platforms that do not have such doc tool.
A platform with a back level doxygen may use --without-doxygen
to get the rest of the documentation built.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>
Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/hw/dmx/doc/Makefile.am
+++ b/hw/dmx/doc/Makefile.am
@@ -62,7 +62,7 @@ dist-local: html/annotated.html
 html/annotated.html: $(DOXYGEN_SRC)
 	$(DOXYGEN) $(srcdir)/doxygen.conf
 
-clean-local:
+maintainer-clean-local:
 	rm -rf html/
 endif
 
