man: add missing __datadir__ for Xserver XWin man pages
The man pages display __datadir__/fonts/X11/... because __datadir__
is missing in cpprules.in. Problem was introduced in commit:
b54bc14ce0ae38c4863794bc3096ca86cdb23908
when replacing __projectroot__ in the previous font path.

Reviewed-by: Alan Coopersmith <alan.coopersmith@sun.com>
Signed-off-by: Gaetan Nadon <memsize@videotron.ca>
Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/cpprules.in
+++ b/cpprules.in
@@ -36,6 +36,7 @@ MANDEFS = \
 	-D__adminmansuffix__=$(ADMIN_MAN_SUFFIX) \
 	-D__mandir__=$(mandir) \
 	-D__projectroot__=$(prefix) \
+	-D__datadir__=$(datadir) \
 	-D__xconfigfile__=$(__XCONFIGFILE__) \
 	-D__xconfigdir__=$(__XCONFIGDIR__) \
 	-D__xkbdir__=$(XKB_BASE_DIRECTORY) \
