Define FD_SETSIZE on Cygwin regardless of XWin DDX
All DDXs segfault on Cygwin unless -DFD_SETSIZE=256 is set, so make sure
we do so whether or not we are building XWin.

FD_SETSIZE must be at least XFD_SETSIZE for uses of select() to be correct.
The Cygwin default is only 64, so it must be increased to 256

Signed-off-by: Yaakov Selkowitz <yselkowitz@users.sourceforge.net>
Signed-off-by: Jon TURNEY <jon.turney@dronecode.org.uk>
Reviewed-by: Colin Harrison <colin.harrison@virgin.net>

--- a/configure.ac
+++ b/configure.ac
@@ -427,6 +427,9 @@ case $host_os in
   darwin*)
 	AC_DEFINE(CSRG_BASED, 1, [System is BSD-like])
 	;;
+  cygwin*)
+	CFLAGS="$CFLAGS -DFD_SETSIZE=256"
+	;;
 esac
 
 dnl augment XORG_RELEASE_VERSION for our snapshot number and to expose the
@@ -1840,8 +1843,6 @@ if test "x$XWIN" = xyes; then
 			       AC_DEFINE(ROOTLESS,1,[Build Rootless code])
 			       CFLAGS="$CFLAGS -DROOTLESS_WORKAROUND"
 			fi
-
-			CFLAGS="$CFLAGS -DFD_SETSIZE=256"
 			;;
 		mingw*)
 			XWIN_SERVER_NAME=Xming
