Cygwin/X: Fix make dist after 11252ed82e1f361b99e86521ac9314f868bd1a3a
Signed-off-by: Yaakov Selkowitz <yselkowitz@users.sourceforge.net>
Acked-by: Adam Jackson <ajax@redhat.com>
Reviewed-by: Keith Packard <keithp@keithp.com>

--- a/hw/xwin/Makefile.am
+++ b/hw/xwin/Makefile.am
@@ -197,6 +197,7 @@ include $(top_srcdir)/cpprules.in
 EXTRA_DIST = \
 	$(GLX_EXTRAS) \
 	$(MAN_SRCS) \
+	$(xwinconfig_DATA) \
 	X.ico \
 	XWin.rc \
 	xlaunch/config.cc \
