--- a/hw/kdrive/fake/Makefile.am
+++ b/hw/kdrive/fake/Makefile.am
@@ -27,4 +27,4 @@ Xfake_DEPENDENCIES =	\
 	@KDRIVE_LOCAL_LIBS@
 
 relink:
-	rm -f $(bin_PROGRAMS) && make $(bin_PROGRAMS)
+	rm -f $(bin_PROGRAMS) && $(MAKE) $(bin_PROGRAMS)
