--- a/hw/kdrive/Makefile.am
+++ b/hw/kdrive/Makefile.am
@@ -27,4 +27,4 @@ SUBDIRS =			\
 DIST_SUBDIRS = fbdev ephyr src linux fake
 
 relink:
-	@for i in $(SERVER_SUBDIRS) ; do $(MAKE) -C $$i relink ; done
+	$(AM_V_at)for i in $(SERVER_SUBDIRS) ; do $(MAKE) -C $$i relink ; done
