Disable setuid configure test on Cygwin
Only Xorg is installed setuid, so there is no need to run this configure
test on Cygwin.

Signed-off-by: Yaakov Selkowitz <yselkowitz@users.sourceforge.net>

--- a/configure.ac
+++ b/configure.ac
@@ -673,6 +673,7 @@ AC_ARG_ENABLE(install-setuid,
 AC_MSG_CHECKING([to see if we can install the Xorg server as root])
 if test "x$SETUID" = "xauto" ; then
 	case $host_os in
+	    cygwin*)		SETUID="no"  ;;
 	    darwin*)		SETUID="no"  ;;
 	    *)
 	   	case $host_cpu in
