dmx: Ignore linuxdoc generated docs
dmx.txt and scaled.txt are generated from SGML, so they probably never
should have been in version control in the first place.

Signed-off-by: Yaakov Selkowitz <yselkowitz@users.sourceforge.net>
Acked-by: Peter Hutterer <peter.hutterer@who-t.net>
Acked-by: Dan Nicholson <dbn.lists@gmail.com>

--- a/hw/dmx/doc/.gitignore
+++ b/hw/dmx/doc/.gitignore
@@ -1,2 +1,10 @@
 #		Add & Override for this directory and it's subdirectories
 html/
+dmx.html
+dmx.pdf
+dmx.ps
+dmx.txt
+scaled.html
+scaled.pdf
+scaled.ps
+scaled.txt
