Install 10-evdev.conf in $(prefix)/etc/X11/xorg.conf.d under udev
udev needs some xorg.conf file to tell it to load a suitable input
driver, 10-evdev.conf is as simple as they come, mapping all evdev
devices to the evdev driver.

Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -9,6 +9,9 @@ AM_CFLAGS += $(UDEV_CFLAGS)
 libconfig_la_SOURCES += udev.c
 libconfig_la_LIBADD = $(UDEV_LIBS)
 
+xorgconfddir = $(prefix)/etc/X11/$(XF86CONFIGDIR)
+xorgconfd_DATA = 10-evdev.conf
+
 else
 
 if CONFIG_NEED_DBUS
@@ -33,4 +36,4 @@ endif # CONFIG_NEED_DBUS
 
 endif # !CONFIG_UDEV
 
-EXTRA_DIST = xorg-server.conf x11-input.fdi
+EXTRA_DIST = xorg-server.conf x11-input.fdi 10-evdev.conf
